opam-version: "2.0"
synopsis: "A Coq library for constructive algebra"
description: """
  A Coq library for constructive algebra
"""

maintainer: "jon@jonmsterling.com"
homepage: "www.jonmsterling.com"
bug-reports: "no"

authors: [
  "Jonathan Sterling"
]

license: "Apache-2.0"

depends: [
  "coq" {>= "8.15.2" }
  "coq-hierarchy-builder"
]

build: [
  [make]
]
install: [
  [make "install"]
]

